message UnitGroup{//作战单位编组
	optional int32 unitId = 1;//类型ID
	optional int32 num = 2;//数量
	optional int32 posId = 3;//位置编号，1-6
	optional int32 teamId = 4;//所属编组id，1-3
	optional int32 heroId = 5;//分配的HeroId，0表示没有分配英雄
}